--- a/index.html
+++ b/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Generador de Reportes de Cirugía Districorr</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Reporte de Cirugía | Districorr</title>
+  <link rel="icon" href="https://i.imgur.com/aA7RzTN.png" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Lato&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  
-<!-- Firebase App (the core Firebase SDK) -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCFtuuSPCcQIkgDN_F1WRS4U-71pRNCf_E",
-    authDomain: "cirugia-reporte.firebaseapp.com",
-    projectId: "cirugia-reporte",
-    storageBucket: "cirugia-reporte.firebasestorage.app",
-    messagingSenderId: "698831567840",
-    appId: "1:698831567840:web:fc6d6197f22beba4d88985",
-    measurementId: "G-HD7ZLL1GLZ"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-</script>
-
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCFtuuSPCcQIkgDN_F1WRS4U-71pRNCf_E",
+      authDomain: "cirugia-reporte.firebaseapp.com",
+      projectId: "cirugia-reporte",
+      storageBucket: "cirugia-reporte.firebasestorage.app",
+      messagingSenderId: "698831567840",
+      appId: "1:698831567840:web:fc6d6197f22beba4d88985",
+      measurementId: "G-HD7ZLL1GLZ"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+  </script>
 </head>
 <body>
   <div class="container">
     <header>
-      <img src="https://i.imgur.com/SiFyFBa.png" class="logo-header" alt="Logo Districorr">
+      <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" />
       <h4 class="text-primary">Generador de Reportes de Cirugía Districorr</h4>
     </header>
 
@@ -48,10 +46,11 @@
       <option>Equipo, adjunto detalles de la cirugía (información general y logística) Verifiquen stock.</option>
       <option>Estimados,Por favor, ver detalle del procedimiento quirúrgico para coordinación interna.</option>
     </select></div>
-    <div class="form-group"><label>Paciente</label><input id="paciente" class="form-control"></div>
-    <div class="form-group"><label>Médico</label><input id="medico" class="form-control"></div>
-    <div class="form-group"><label>Fecha de Cirugía</label><input type="date" id="fechaCirugia" class="form-control"></div>
-    <div class="form-group"><label>Tipo de Cirugía</label><input id="tipoCirugia" class="form-control"></div>
+
+    <div class="form-group"><label>Paciente</label><input id="paciente" class="form-control" /></div>
+    <div class="form-group"><label>Médico</label><input id="medico" class="form-control" /></div>
+    <div class="form-group"><label>Fecha de Cirugía</label><input type="date" id="fechaCirugia" class="form-control" /></div>
+    <div class="form-group"><label>Tipo de Cirugía</label><input id="tipoCirugia" class="form-control" /></div>
     <div class="form-group"><label>Material Requerido</label><textarea id="material" class="form-control"></textarea></div>
     <div class="form-group"><label>Observaciones</label><textarea id="observaciones" class="form-control"></textarea></div>
     <div class="form-group"><label>Información Adicional</label><textarea id="infoAdicional" class="form-control"></textarea></div>
@@ -60,12 +59,17 @@
       <button onclick="generarTexto()">Generar Texto</button>
       <button onclick="copiarTexto()">Copiar y Guardar</button>
       <button onclick="descargarPDF()">Descargar PDF</button>
+      <a href="admin.html" class="btn-link">Ver Reportes</a>
     </div>
 
     <div id="resultado-container" style="display:none;">
       <h5>Resultado:</h5>
       <pre id="texto-plano-output"></pre>
     </div>
+
+    <footer class="footer-note">
+      By Responsable de Sistemas Franco Pared – Districorr ®
+    </footer>
   </div>
   <script src="script.js"></script>
 </body>
