--- a/index.html
+++ b/index.html
@@ -146,10 +146,20 @@
       <a href="admin.html" class="btn-link">Ver Reportes</a>
     </div>
 
-    <div id="resultado-container" style="display:none;">
-      <h5 class="mt-4">Resultado:</h5>
-      <pre id="texto-plano-output"></pre>
-    </div>
+   <div id="resultado-container" style="display:none;">
+  <div style="
+    background-color: #f9f9f9;
+    border-left: 5px solid #007bff;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  ">
+    <h4 style="margin-top: 0; color: #003f63;">📝 Resultado del Reporte</h4>
+    <pre id="texto-plano-output" style="white-space: pre-wrap; font-family: 'Courier New', monospace;"></pre>
+  </div>
+</div>
+
 
     <small class="credit">By Responsable de Sistemas Franco Pared – Districorr ®</small>
   </div>
