--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ fetch('tipos_cirugia.json')
   .catch(err => console.error('Error cargando tipos de cirugía:', err));
 </script>
 <script src="script.js"></script>
+<a href="estadisticas.html" class="btn-link">📊 Ver Estadísticas</a>
 
 <body>
   <div class="container">
