--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <body>
 <div class="spinner" id="spinner"></div>
 <div class="container">
-  <header>
-    <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" />
-    <h4 class="text-primary font-weight-bold">Generador de Reportes de Cirugía Districorr</h4>
-  </header>
+  <header style="text-align: center; margin-bottom: 10px;">
+  <img src="https://i.imgur.com/aA7RzTN.png" alt="Logo Districorr" style="max-width: 160px; height: auto; margin-bottom: 10px;" />
+  <h4 style="font-weight: bold; color: #004080;">Generador de Reportes de Cirugía Districorr</h4>
+</header>
 
   <div class="form-group">
     <label>Paciente</label>
