--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     body {
       background-color: #f9f9f9;
       color: #333;
+      font-family: 'Lato', sans-serif;
     }
     @media (prefers-color-scheme: dark) {
       body {
@@ -40,15 +41,47 @@
     @keyframes spin {
       to { transform: translate(-50%, -50%) rotate(360deg); }
     }
+    .logo-header {
+      max-width: 120px;
+      height: auto;
+      display: block;
+      margin: 10px auto;
+    }
+    header h4 {
+      text-align: center;
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+    }
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: 600;
+    }
+    .form-control {
+      width: 100%;
+      max-width: 100%;
+      padding: 8px;
+      font-size: 1rem;
+      margin-bottom: 15px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    .text-center button, .text-center a {
+      margin: 5px 5px;
+    }
+    .btn-link {
+      text-decoration: none;
+      color: #007bff;
+    }
   </style>
 </head>
 <body>
 <div class="spinner" id="spinner"></div>
 <div class="container">
-  <header style="text-align: center; margin-bottom: 10px;">
-  <img src="https://i.imgur.com/aA7RzTN.png" alt="Logo Districorr" style="max-width: 160px; height: auto; margin-bottom: 10px;" />
-  <h4 style="font-weight: bold; color: #004080;">Generador de Reportes de Cirugía Districorr</h4>
-</header>
+  <header>
+    <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" />
+    <h4>Generador de Reportes de Cirugía Districorr</h4>
+  </header>
 
   <div class="form-group">
     <label>Paciente</label>
@@ -104,3 +137,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
