--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
-...
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Generador de Reportes de Cirugía Districorr</title>
+  <link rel="icon" href="https://i.imgur.com/aA7RzTN.png" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Lato&display=swap" rel="stylesheet">
+  <style>
+    label, h4, h2, select, input, textarea {
+      color: #333 !important;
+      font-weight: 500;
+    }
+    h4 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 1.5rem;
+    }
+    .credit {
+      display: block;
+      margin-top: 40px;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #777;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header>
+      <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" style="max-width: 100px; display: block; margin: auto;" />
+      <h4>Generador de Reportes de Cirugía Districorr</h4>
+    </header>
+
+    <div class="form-group">
+      <label for="formato">Formato de Texto</label>
+      <select id="formato" class="form-control">
+        <option value="formal">Formal</option>
+        <option value="moderno">Moderno</option>
+        <option value="casual">Detallado</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="mensajeInicio">Mensaje de Inicio</label>
+      <select id="mensajeInicio" class="form-control">
+        <option>Estimados, Adjunto detalles de la cirugia programada</option>
+        <option>Estimados, Informo las novedades de la cirugia ya programada</option>
+        <option>Estimados, se adjunta información de cirugía para gestión de materiales y logística.</option>
+        <option>Equipo, adjunto detalles de la cirugía (información general y logística) Verifiquen stock.</option>
+        <option>Estimados,Por favor, ver detalle del procedimiento quirúrgico para coordinación interna.</option>
+      </select>
+    </div>
+
+    <div class="form-group"><label for="paciente">Paciente</label><input id="paciente" class="form-control" /></div>
+    <div class="form-group"><label for="medico">Médico</label><input id="medico" class="form-control" list="medicosList" /><datalist id="medicosList"></datalist></div>
+    <div class="form-group"><label for="instrumentador">Instrumentador</label><input id="instrumentador" class="form-control" list="instrumentadoresList" /><datalist id="instrumentadoresList"></datalist></div>
+    <div class="form-group"><label for="lugarCirugia">Lugar de Cirugía</label><input id="lugarCirugia" class="form-control" list="lugaresList" /><datalist id="lugaresList"></datalist></div>
+    <div class="form-group"><label for="fechaCirugia">Fecha de Cirugía</label><input type="date" id="fechaCirugia" class="form-control" /></div>
+    <div class="form-group"><label for="tipoCirugia">Tipo de Cirugía</label><input id="tipoCirugia" class="form-control" list="tiposCirugia" /><datalist id="tiposCirugia"></datalist></div>
+    <div class="form-group"><label for="material">Material Requerido</label><textarea id="material" class="form-control"></textarea></div>
+    <div class="form-group"><label for="observaciones">Observaciones</label><textarea id="observaciones" class="form-control"></textarea></div>
+    <div class="form-group"><label for="infoAdicional">Información Adicional</label><textarea id="infoAdicional" class="form-control"></textarea></div>
+
+    <div class="text-center">
+      <button onclick="generarTexto()">Generar Texto</button>
+      <button onclick="copiarTexto()">Copiar y Guardar</button>
+      <button onclick="compartirWhatsApp()">Compartir WhatsApp</button>
+      <button onclick="compartirComoImagen()">Compartir Imagen</button>
+      <button onclick="enviarPorEmail()">Enviar Email</button>
+      <button onclick="imprimirReporte()">Imprimir</button>
+      <button onclick="toggleDarkMode()">🌙 Modo Oscuro</button>
+      <a href="admin.html" class="btn-link">Ver Reportes</a>
+    </div>
+
+    <div id="resultado-container" style="display:none;"></div>
+
+    <small class="credit">By Responsable de Sistemas Franco Pared – Districorr ®</small>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
