--- a/admin.html
+++ b/admin.html
@@ -24,83 +24,91 @@
     @keyframes spin {
       to { transform: translate(-50%, -50%) rotate(360deg); }
     }
-    .search-box {
-      text-align: center;
-      margin: 20px 0;
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
     }
-    .search-box input {
+
+    th, td {
+      text-align: left;
       padding: 10px;
-      width: 300px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      background-color: #007bff;
+      color: white;
+    }
+
+    tbody tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    body.dark-mode th {
+      background-color: #333;
+    }
+
+    body.dark-mode tbody tr:nth-child(even) {
+      background-color: #2a2a2a;
     }
   </style>
 </head>
 <body>
-<div class="spinner" id="spinner"></div>
-<div class="container">
-  <h2>Panel de Reportes Enviados</h2>
-  <div class="search-box">
-    <input type="text" id="buscador" placeholder="Buscar por paciente, médico o tipo..." />
+  <div class="spinner" id="spinner"></div>
+  <div class="container">
+    <header>
+      <img src="https://i.imgur.com/aA7RzTN.png" alt="Districorr Logo" class="logo-header" />
+      <h2>Panel de Reportes Enviados</h2>
+    </header>
+    <table>
+      <thead>
+        <tr><th>Paciente</th><th>Médico</th><th>Tipo</th><th>Fecha</th><th>Material</th></tr>
+      </thead>
+      <tbody id="reporte-rows"></tbody>
+    </table>
+    <div class="text-center" style="margin-top: 20px;">
+      <a href="index.html" class="btn-link">← Volver al formulario</a>
+    </div>
   </div>
-  <table>
-    <thead>
-      <tr><th>Paciente</th><th>Médico</th><th>Tipo</th><th>Fecha</th><th>Material</th></tr>
-    </thead>
-    <tbody id="reporte-rows"></tbody>
-  </table>
-  <a href="index.html">← Volver al formulario</a>
-</div>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCFtuuSPCcQIkgDN_F1WRS4U-71pRNCf_E",
-    authDomain: "cirugia-reporte.firebaseapp.com",
-    projectId: "cirugia-reporte",
-    storageBucket: "cirugia-reporte.firebasestorage.app",
-    messagingSenderId: "698831567840",
-    appId: "1:698831567840:web:fc6d6197f22beba4d88985",
-    measurementId: "G-HD7ZLL1GLZ"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
 
-  const spinner = document.getElementById("spinner");
-  const tbody = document.getElementById("reporte-rows");
-  const buscador = document.getElementById("buscador");
-  let datosTotales = [];
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCFtuuSPCcQIkgDN_F1WRS4U-71pRNCf_E",
+      authDomain: "cirugia-reporte.firebaseapp.com",
+      projectId: "cirugia-reporte",
+      storageBucket: "cirugia-reporte.firebasestorage.app",
+      messagingSenderId: "698831567840",
+      appId: "1:698831567840:web:fc6d6197f22beba4d88985",
+      measurementId: "G-HD7ZLL1GLZ"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-  function mostrarFiltrados(texto) {
-    tbody.innerHTML = '';
-    const filtro = texto.toLowerCase();
-    const resultados = datosTotales.filter(d => {
-      return (d.paciente || '').toLowerCase().includes(filtro)
-          || (d.medico || '').toLowerCase().includes(filtro)
-          || (d.tipoCirugia || '').toLowerCase().includes(filtro);
-    });
-    resultados.forEach(data => {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>${data.paciente || ''}</td>
-        <td>${data.medico || ''}</td>
-        <td>${data.tipoCirugia || ''}</td>
-        <td>${new Date(data.fechaCirugia).toLocaleDateString("es-AR")}</td>
-        <td>${data.material || ''}</td>`;
-      tbody.appendChild(tr);
-    });
-  }
+    const spinner = document.getElementById("spinner");
+    const tbody = document.getElementById("reporte-rows");
 
-  buscador.addEventListener('input', e => {
-    mostrarFiltrados(e.target.value);
-  });
-
-  window.onload = () => {
-    spinner.style.display = 'block';
-    db.collection("reportes").orderBy("timestamp", "desc").get().then(snapshot => {
-      datosTotales = snapshot.docs.map(doc => doc.data());
-      mostrarFiltrados('');
-      spinner.style.display = 'none';
-    });
-  };
-</script>
+    window.onload = () => {
+      spinner.style.display = 'block';
+      db.collection("reportes").orderBy("timestamp", "desc").get().then(snapshot => {
+        snapshot.forEach(doc => {
+          const data = doc.data();
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${data.paciente || ''}</td>
+            <td>${data.medico || ''}</td>
+            <td>${data.tipoCirugia || ''}</td>
+            <td>${new Date(data.fechaCirugia).toLocaleDateString("es-AR")}</td>
+            <td>${data.material || ''}</td>`;
+          tbody.appendChild(tr);
+        });
+        spinner.style.display = 'none';
+      }).catch(error => {
+        console.error("Error al cargar reportes:", error);
+        spinner.style.display = 'none';
+      });
+    };
+  </script>
 </body>
 </html>
