--- a/index.html
+++ b/index.html
@@ -6,30 +6,28 @@
   <title>Generador de Reportes de Cirugía Districorr</title>
   <link rel="icon" href="https://i.imgur.com/aA7RzTN.png" />
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Lato&display=swap" rel="stylesheet">
-  <style>
-    label, h4, h2, select, input, textarea {
-      color: #333 !important;
-      font-weight: 500;
-    }
-    h4 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-size: 1.5rem;
-    }
-    .credit {
-      display: block;
-      margin-top: 40px;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #777;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Lato&display=swap" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCFtuuSPCcQIkgDN_F1WRS4U-71pRNCf_E",
+      authDomain: "cirugia-reporte.firebaseapp.com",
+      projectId: "cirugia-reporte",
+      storageBucket: "cirugia-reporte.firebasestorage.app",
+      messagingSenderId: "698831567840",
+      appId: "1:698831567840:web:fc6d6197f22beba4d88985",
+      measurementId: "G-HD7ZLL1GLZ"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+  </script>
 </head>
 <body>
   <div class="container">
     <header>
-      <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" style="max-width: 100px; display: block; margin: auto;" />
+      <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" />
       <h4>Generador de Reportes de Cirugía Districorr</h4>
     </header>
 
@@ -45,11 +43,11 @@
     <div class="form-group">
       <label for="mensajeInicio">Mensaje de Inicio</label>
       <select id="mensajeInicio" class="form-control">
-        <option>Estimados, Adjunto detalles de la cirugia programada</option>
-        <option>Estimados, Informo las novedades de la cirugia ya programada</option>
+        <option>Estimados, Adjunto detalles de la cirugía programada</option>
+        <option>Estimados, Informo las novedades de la cirugía ya programada</option>
         <option>Estimados, se adjunta información de cirugía para gestión de materiales y logística.</option>
         <option>Equipo, adjunto detalles de la cirugía (información general y logística) Verifiquen stock.</option>
-        <option>Estimados,Por favor, ver detalle del procedimiento quirúrgico para coordinación interna.</option>
+        <option>Estimados, Por favor, ver detalle del procedimiento quirúrgico para coordinación interna.</option>
       </select>
     </div>
 
@@ -79,6 +77,41 @@
     <small class="credit">By Responsable de Sistemas Franco Pared – Districorr ®</small>
   </div>
 
+  <!-- Script para ranking de tipos -->
+  <script>
+    fetch('tipos_cirugia.json')
+      .then(response => response.json())
+      .then(data => {
+        const datalist = document.getElementById('tiposCirugia');
+        const input = document.getElementById('tipoCirugia');
+        const key = 'ranking_tiposCirugia';
+
+        function actualizarDatalist() {
+          const ranking = JSON.parse(localStorage.getItem(key) || '{}');
+          const ordenados = [...data].sort((a, b) => (ranking[b] || 0) - (ranking[a] || 0));
+          datalist.innerHTML = '';
+          ordenados.forEach(tipo => {
+            const option = document.createElement('option');
+            option.value = tipo;
+            datalist.appendChild(option);
+          });
+        }
+
+        input.addEventListener('change', () => {
+          const valor = input.value.trim();
+          if (!valor) return;
+          const ranking = JSON.parse(localStorage.getItem(key) || '{}');
+          ranking[valor] = (ranking[valor] || 0) + 1;
+          localStorage.setItem(key, JSON.stringify(ranking));
+          actualizarDatalist();
+        });
+
+        actualizarDatalist();
+      })
+      .catch(err => console.error('Error cargando tipos de cirugía:', err));
+  </script>
+
+  <!-- Tu script personalizado con funciones -->
   <script src="script.js"></script>
 </body>
 </html>
