--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <label for="fechaCirugia">Fecha de Cirugía:</label>
         <input type="date" id="fechaCirugia" class="form-control" required>
       </div>
-
+      <div class="form-group">
+     <label for="lugarCirugia">Lugar de Cirugía:</label>
+     <input type="text" id="lugarCirugia" class="form-control">
+     </div>
       <div class="form-group">
         <label for="tipoCirugia">Tipo de Cirugía:</label>
         <select id="tipoCirugia" class="form-control" required>
