--- a/index.html
+++ b/index.html
@@ -156,12 +156,16 @@
     <div class="form-group"><label>Observaciones</label><textarea id="observaciones" class="form-control"></textarea></div>
     <div class="form-group"><label>Información Adicional</label><textarea id="infoAdicional" class="form-control"></textarea></div>
 
-    <div class="text-center">
-      <button onclick="generarTexto()">Generar Texto</button>
-      <button onclick="copiarTexto()">Copiar y Guardar</button>
-      <button onclick="descargarPDF()">Descargar PDF</button>
-      <a href="admin.html" class="btn-link">Ver Reportes</a>
-    </div>
+   <div class="text-center">
+  <button onclick="generarTexto()">📝 Generar Texto</button>
+  <button onclick="copiarTexto()">📋 Copiar y Guardar</button>
+  <button onclick="compartirWhatsApp()">📲 Enviar WhatsApp</button>
+  <button onclick="enviarPorEmail()">✉️ Enviar Email</button>
+  <br />
+  <button onclick="descargarPDF()">🖨️ Imprimir / PDF</button>
+  <a href="admin.html" class="btn-link">📁 Ver Reportes</a>
+  <button onclick="verEstadisticas()">📊 Ver Estadísticas</button>
+</div>
 
    <div id="resultado-container" style="display:none;">
   <div style="
