--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
   <button onclick="verEstadisticas()">📊 Ver Estadísticas</button>
 </div>
 
-   <div id="resultado-container" style="display:none;">
+  <div id="resultado-container" style="display: none;"></div>
+
   <div style="
     background-color: #f9f9f9;
     border-left: 5px solid #007bff;
