--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
   <button onclick="generarTexto()">📝 Generar Texto</button>
   <button onclick="copiarTexto()">📋 Copiar y Guardar</button>
   <button onclick="compartirWhatsApp()">📲 Enviar WhatsApp</button>
+  <button onclick="generarImagen()">🖼️ Guardar como Imagen</button>
   <button onclick="enviarPorEmail()">✉️ Enviar Email</button>
   <br />
   <button onclick="descargarPDF()">🖨️ Imprimir / PDF</button>
