--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" />
+      <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" style="max-height: 50px;" />
       <h4 class="text-primary font-weight-bold">Generador de Reportes de Cirugía Districorr</h4>
     </header>
 
@@ -145,7 +145,7 @@
     <div class="form-group"><label>Observaciones</label><textarea id="observaciones" class="form-control" rows="3"></textarea></div>
     <div class="form-group"><label>Información Adicional</label><textarea id="infoAdicional" class="form-control" rows="3"></textarea></div>
 
-    <div class="text-center">
+     <div class="text-center">
       <button onclick="generarTexto()">📝 Generar Texto</button>
       <button onclick="copiarTexto()">📋 Copiar y Guardar</button>
       <button onclick="compartirWhatsApp()">📲 Enviar WhatsApp</button>
