--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 
     <div id="resultado-container" style="display: none;"></div>
 
+    <div class="texto-plano-container">
+      <h4>📝 Resultado del Reporte</h4>
+      <pre id="texto-plano-output" style="white-space: pre-wrap; font-family: 'Courier New', monospace;"></pre>
+    </div>
+
     <small class="credit">By Responsable de Sistemas Franco Pared – Districorr ®</small>
   </div>
 
