--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" style="max-height: 50px;" />
+      <img src="https://i.imgur.com/aA7RzTN.png" class="logo-header" alt="Logo Districorr" style="max-height: 90px; display: block; margin: 0 auto;" />
       <h4 class="text-primary font-weight-bold">Generador de Reportes de Cirugía Districorr</h4>
     </header>
 
@@ -157,11 +157,6 @@
     </div>
 
     <div id="resultado-container" style="display: none;"></div>
-
-    <div class="texto-plano-container">
-      <h4>📝 Resultado del Reporte</h4>
-      <pre id="texto-plano-output" style="white-space: pre-wrap; font-family: 'Courier New', monospace;"></pre>
-    </div>
 
     <small class="credit">By Responsable de Sistemas Franco Pared – Districorr ®</small>
   </div>
