--- a/index.html
+++ b/index.html
@@ -183,5 +183,6 @@
       alert("Error al conectar con la base de datos");
     }
   </script>
+<div id="toast" style="display:none;position:fixed;bottom:20px;right:20px;background:#28a745;color:#fff;padding:10px 20px;border-radius:8px;box-shadow:0 0 10px #0005;">✅ Reporte generado correctamente</div>
 </body>
 </html>
