--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 </head>
+<div id="minimapa" style="position:fixed;top:40%;left:10px;background:#007bff;color:#fff;padding:10px;border-radius:8px;">
+  <div style="font-weight:bold;">Ir a:</div>
+  <a href="#paciente" style="color:#fff;text-decoration:none;display:block;margin:5px 0;">Paciente</a>
+  <a href="#medico" style="color:#fff;text-decoration:none;display:block;margin:5px 0;">Médico</a>
+  <a href="#tipoCirugia" style="color:#fff;text-decoration:none;display:block;margin:5px 0;">Tipo</a>
+  <a href="#material" style="color:#fff;text-decoration:none;display:block;margin:5px 0;">Material</a>
+  <a href="#observaciones" style="color:#fff;text-decoration:none;display:block;margin:5px 0;">Obs.</a>
+</div>
+
 <body>
   <div class="container">
     <header>
